--- a/public/webasset/css/style.css
+++ b/public/webasset/css/style.css
@@ -10,6 +10,10 @@
 }
 /* end */
 
+.html {
+  text-decoration: none;
+}
+
 #produkID {
   width: 50vw;
   margin-top: 50px;
@@ -559,4 +563,18 @@
   width: 500px;
   margin-top: 60px;
   box-shadow: 10px 5px 10px #c8c8c8;
+}
+
+.card-body h5 {
+  text-decoration: none;
+  color :black;
+}
+
+.card-body p {
+  text-decoration: none;
+  color :black;
+}
+
+a:link {
+  text-decoration: none!important;
 }
